[package]
name = "access-control"
version = "0.1.1"
authors = ["Ozgun Ozerk"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ozgunozerk/RBAC-pallet"

[dependencies]
log = { default-features = false, version = "0.4" }
scale-info = { version = '2.3.0', default-features = false, features = [
    'derive',
] }
codec = { version = '3.2.1', default-features = false, features = [
    'derive',
], package = 'parity-scale-codec' }
serde = { version = "1.0.130", default-features = false }

sp-core = { version = '7.0.0', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37" }
sp-io = { version = '7.0.0', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-std = { version = '5.0.0', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37" }
frame-support = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37" }
frame-system = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.37" }

[dev-dependencies]
test-context = { default-features = false, version = "0.1.4" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
    'serde/std',
    'log/std',
]
try-runtime = ['frame-support/try-runtime']
